# Nocker

./: .gitignore  new_file.txt
backend/: alembic.ini  pyproject.toml  readme.md  run.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  ai.py  auth.py  evaluations.py  jobs.py  knowledge_base.py  rag.py  scraper.py  token_usage.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  application.py  job.py  knowledge_base.py  response_evaluation.py  token_usage.py  user.py
backend/app/schemas/: __init__.py  application.py  evaluation.py  job.py  knowledge_base.py  token_usage.py
backend/app/services/ai/: ollama_service.py  ollama_tracker.py  prompts.py
backend/app/services/browser/: form_filler.py  linkedin_auth.py  linkedin_scraper.py  playwright_service.py
backend/app/services/embeddings/: embedding_service.py
backend/app/services/evaluator/: response_evaluator.py
backend/app/services/ollama_server/: google_collab_notebook.ipynb  test_ollama-server.py
backend/app/services/parsers/: resume_parser.py
backend/app/services/qdrant/: qdrant_service.py
backend/app/services/rag/: rag_service.py
backend/app/services/tracker/: token_tracker.py
docs/: GETTING_STARTED.md  official_database_schema.sql  response_evaluation.sql  token_usage_migration.sql
frontend/app/: page.tsx
infrastructure/docker/: docker-compose.yml
personal_docs_sunil/: message (2).txt
